--- a/manifest.json
+++ b/manifest.json
@@ -19,7 +19,8 @@
   "content_scripts": [
     {
       "matches": ["https://www.linkedin.com/jobs/*"],
-      "js": ["popup.js"]
+      "js": ["popup.js"],
+      "css": ["content.css"]
     }
   ],
   "background": {
