--- a/manifest.json
+++ b/manifest.json
@@ -13,8 +13,7 @@
   "permissions": [
     "activeTab",
     "tabs",
-    "storage",
-    "https://www.linkedin.com/*"
+    "storage"
   ],
   "background": {
     "service_worker": "background.js"
