--- a/manifest.json
+++ b/manifest.json
@@ -13,7 +13,8 @@
   "permissions": [
     "activeTab",
     "tabs",
-    "storage"
+    "storage",
+    "https://www.linkedin.com/*"
   ],
   "background": {
     "service_worker": "background.js"
