--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "LinkedIn Cover Letter Writer",
-  "version": "1.0008",
+  "version": "1.0",
   "action": {
     "default_popup": "popup.html",
     "default_icon": {
@@ -13,7 +13,9 @@
   "permissions": [
     "activeTab",
     "tabs",
-    "storage",
+    "storage"
+  ],
+  "host_permissions": [
     "https://www.linkedin.com/*"
   ],
   "background": {
