--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,8 @@
 {
   "manifest_version": 3,
   "name": "LinkedIn Cover Letter Writer",
-  "version": "1.0013",
+  "version": "1.0",
   "action": {
-    "default_popup": "popup.html",
     "default_icon": {
       "16": "images/icon16.png",
       "32": "images/icon32.png",
@@ -13,10 +12,17 @@
   "permissions": [
     "activeTab",
     "tabs",
-    "storage"
+    "scripting"
   ],
   "host_permissions": [
     "https://www.linkedin.com/*"
+  ],
+  "content_scripts": [
+    {
+      "matches": ["https://www.linkedin.com/jobs/*"],
+      "js": ["popup.js"],
+      "css": ["content.css"]
+    }
   ],
   "background": {
     "service_worker": "background.js"
