--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,7 @@
   "name": "LinkedIn Cover Letter Writer",
   "version": "1.0",
   "action": {
+    "default_popup": "popup.html",
     "default_icon": {
       "16": "images/icon16.png",
       "32": "images/icon32.png",
